--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?q=80&w=1200&h=630&auto=format&fit=crop" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?q=80&w=1200&h=630&auto=format&fit=crop"" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?q=80&w=1200&h=630&auto=format&fit=crop" />
   </head>
 
   <body>
