--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Heart Disease Predictor</title>
+    <title>HeartHealth AIr</title>
     <meta name="description" content="Clinical assessment tool based on Machine Learning." />
     <meta name="author" content="Anshuk Chaturvedi" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Heart Disease Predictor" />
+    <meta property="og:title" content="HeartHealth AI" />
     <meta property="og:description" content="Professional Heart Disease Risk Assessment Tool" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?q=80&w=1200&h=630&auto=format&fit=crop" />
