--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="HeartHealth AI" />
     <meta property="og:description" content="Professional Heart Disease Risk Assessment Tool" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?q=80&w=1200&h=630&auto=format&fit=crop" />
+    <meta property="og:image" content="/og-preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?q=80&w=1200&h=630&auto=format&fit=crop" />
