--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,14 @@
     <meta property="og:title" content="HeartHealth AI" />
     <meta property="og:description" content="Professional Heart Disease Risk Assessment Tool" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-preview.png" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?q=80&w=1200&h=630&auto=format&fit=crop" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+ 
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
